--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "webpack --config build/webpack.prod.js",
     "watch": "webpack --watch",
-    "start": "webpack-dev-server --open --config build/webpack.dev.js",
+    "start": "webpack-dev-server --open --config build/webpack.dev.js --env.NODE_ENV=local --env.production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,12 +19,19 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "lodash": "^4.17.11"
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "babel-loader": "^8.0.0-beta.0",
+    "lodash": "^4.17.11",
+    "vue": "^2.6.10",
+    "vue-style-loader": "^4.1.2"
   }
 }
