--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "demo",
-  "sideEffects": false,
   "version": "1.0.0",
   "description": "",
   "private": true,
@@ -19,6 +18,7 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.30.0",
